--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.71",
+    "@auth/core": "^0.34.3",
     "@aws-sdk/client-s3": "^3.933.0",
     "@aws-sdk/client-secrets-manager": "^3.933.0",
     "@aws-sdk/middleware-logger": "^3.930.0",
