--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -142,6 +142,10 @@ jobs:
           exit 1
 
       - name: Prepare E2E env vars
+        env:
+          SECRET_NEXTAUTH: ${{ secrets.NEXTAUTH_SECRET }}
+          SECRET_GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          SECRET_GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         run: |
           if [ "${{ github.event_name }}" = "pull_request" ] && [ "${{ github.event.pull_request.head.repo.fork }}" = "true" ]; then
             echo "Using generated secrets for forked PR (GitHub secrets are unavailable)."
@@ -151,15 +155,23 @@ jobs:
             echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
           else
-            if [ -z "${{ secrets.NEXTAUTH_SECRET }}" ]; then
+            if [ -z "${SECRET_NEXTAUTH}" ]; then
               echo "Missing NEXTAUTH_SECRET secret for internal run." >&2
               exit 1
             fi
-            echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
-            echo "AUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
+            echo "NEXTAUTH_SECRET=${SECRET_NEXTAUTH}" >> "$GITHUB_ENV"
+            echo "AUTH_SECRET=${SECRET_NEXTAUTH}" >> "$GITHUB_ENV"
             # Google OAuth is optional - set to empty string if not configured
-            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> "$GITHUB_ENV"
-            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> "$GITHUB_ENV"
+            if [ -n "${SECRET_GOOGLE_CLIENT_ID}" ]; then
+              echo "GOOGLE_CLIENT_ID=${SECRET_GOOGLE_CLIENT_ID}" >> "$GITHUB_ENV"
+            else
+              echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
+            fi
+            if [ -n "${SECRET_GOOGLE_CLIENT_SECRET}" ]; then
+              echo "GOOGLE_CLIENT_SECRET=${SECRET_GOOGLE_CLIENT_SECRET}" >> "$GITHUB_ENV"
+            else
+              echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
+            fi
           fi
 
       - name: Run Playwright E2E Tests
