fix(ci): correct pnpm cache path in E2E workflow
The cache-dependency-path was incorrectly set to 'Fixzit/pnpm-lock.yaml'
but the checkout already happens in the root. Changed to 'pnpm-lock.yaml'.

This was causing 'Setup Node with pnpm cache' step to fail, preventing
E2E tests from running at all.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-          cache-dependency-path: Fixzit/pnpm-lock.yaml
+          cache-dependency-path: 'pnpm-lock.yaml'
 
       - name: Install dependencies
         working-directory: Fixzit
@@ -90,6 +90,7 @@ jobs:
 
       - name: Get Playwright version
         id: playwright-version
+        working-directory: Fixzit
         run: echo "version=$(pnpm list @playwright/test --depth=0 --json | jq -r '.[0].devDependencies["@playwright/test"].version')" >> $GITHUB_OUTPUT
 
       - name: Cache Playwright browsers
