fix(ci): correct Next.js cache paths in E2E workflow
The Next.js cache paths were still referencing Fixzit/ prefix which
doesn't exist after checkout. This was causing builds to fail.

Changed:
- path: Fixzit/.next/cache → .next/cache
- hashFiles patterns: Fixzit/* → *

This fixes the build failures in E2E tests.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -111,8 +111,8 @@ jobs:
       - name: Cache Next.js build
         uses: actions/cache@v4
         with:
-          path: Fixzit/.next/cache
-          key: nextjs-${{ runner.os }}-${{ hashFiles('Fixzit/pnpm-lock.yaml', 'Fixzit/package.json', 'Fixzit/tsconfig*.json', 'Fixzit/next.config.*', 'Fixzit/next-env.d.ts', 'Fixzit/middleware.*', 'Fixzit/tailwind.config.*', 'Fixzit/postcss.config.*', 'Fixzit/babel.config.*', 'Fixzit/turbo.json', 'Fixzit/app/**', 'Fixzit/pages/**', 'Fixzit/components/**', 'Fixzit/lib/**', 'Fixzit/src/**', 'Fixzit/styles/**', 'Fixzit/public/**', 'Fixzit/public_local/**') }}
+          path: .next/cache
+          key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml', 'package.json', 'tsconfig*.json', 'next.config.*', 'next-env.d.ts', 'middleware.*', 'tailwind.config.*', 'postcss.config.*', 'babel.config.*', 'turbo.json', 'app/**', 'pages/**', 'components/**', 'lib/**', 'src/**', 'styles/**', 'public/**', 'public_local/**') }}
           restore-keys: |
             nextjs-${{ runner.os }}-
 
