fix(ci): address remaining CodeRabbit E2E workflow issues
Critical fixes:
1. Fixed project name mismatch in summary job - changed Mobile:EN:Admin
   to Mobile:EN:Technician to match the actual matrix configuration
   (this was causing artifact download failures)

2. Made ALLOW_OFFLINE_MONGODB flag actually used in build step with
   conditional logging (no longer dead config)

3. Removed redundant ALLOW_LOCAL_MONGODB flag that serves no purpose
   when NODE_ENV=test (only used in production validation)

These changes ensure:
- Summary job downloads correct artifacts from actual matrix projects
- Build environment flags are used and not just declared
- Test environment is clean without unused variables

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -123,6 +123,9 @@ jobs:
           ALLOW_OFFLINE_MONGODB: 'true'
         run: |
           echo "Building Next.js app for E2E tests..."
+          if [ "$ALLOW_OFFLINE_MONGODB" = "true" ]; then
+            echo "⏭️  Building in offline mode (MongoDB disabled)..."
+          fi
           pnpm build || {
             echo "❌ Build failed! Checking for common issues..."
             echo "NODE_ENV: $NODE_ENV"
@@ -187,7 +190,6 @@ jobs:
           # Database - use offline mode with mock sessions
           MONGODB_URI: mongodb://localhost:27017/fixzit_test
           ALLOW_OFFLINE_MONGODB: 'true'
-          ALLOW_LOCAL_MONGODB: 'true'
           PLAYWRIGHT_TESTS: 'true'
           
           # Test environment
@@ -366,7 +368,7 @@ jobs:
               { name: 'Desktop:EN:Admin', locale: 'EN', persona: 'Admin' },
               { name: 'Mobile:AR:Tenant', locale: 'AR', persona: 'Tenant' },
               { name: 'Desktop:AR:Tenant', locale: 'AR', persona: 'Tenant' },
-              { name: 'Mobile:EN:Admin', locale: 'EN', persona: 'Admin' }
+              { name: 'Mobile:EN:Technician', locale: 'EN', persona: 'Technician' }
             ];
             
             const statuses = {};
