fix(review): address all CodeRabbit feedback
escalation.service.ts:
- Add UserLike interface to replace 'any' type for type safety
- Remove unused 'context' parameter from resolveEscalationContact
- Add .sort() for deterministic query ordering
- Add error logging for observability
- Externalize fallback email to ESCALATION_FALLBACK_EMAIL env var
- Add fallback logging for debugging

i18n/ar.json:
- Add fm.workOrders.attachmentsCount translation
- Add fm.workOrders.new.* subsection (requiredFields, success, woNumber, uploadHint)
- Add fm.workOrders.attachments.missingUrl translation
- Achieve complete parity with en.json structure

API routes:
- Update all resolveEscalationContact calls to match new signature
- Remove unused moduleParam variable from context route
- Update escalate, context routes, and requireVerifiedDocs middleware

Addresses CodeRabbit comments:
- Type safety improvements (Major)
- Localization parity (Major)
- Query optimization (Major)
- Error handling (Major)
- Configuration externalization (Major)
- Unused variable cleanup (Minor)

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -166,8 +166,16 @@ jobs:
             echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
             echo "AUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
             # Google OAuth is optional - set to empty string if not configured
-            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> "$GITHUB_ENV"
-            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> "$GITHUB_ENV"
+            if [ -n "${{ secrets.GOOGLE_CLIENT_ID }}" ]; then
+              echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> "$GITHUB_ENV"
+            else
+              echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
+            fi
+            if [ -n "${{ secrets.GOOGLE_CLIENT_SECRET }}" ]; then
+              echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> "$GITHUB_ENV"
+            else
+              echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
+            fi
           fi
 
       - name: Run Playwright E2E Tests
