fix(ci): comprehensive fixes for all failing CI checks
Infrastructure Fixes:
- Create .gitleaks.toml with allowlist for documentation examples
- Fix GitHub Actions e2e-tests.yml secret access pattern
- Update audit-translations.mjs to read from i18n JSON files instead of TS

Translation System:
- Add flattenKeys() helper to properly parse nested JSON structures
- Script now correctly reads from i18n/en.json and i18n/ar.json
- Validates 30,785 keys in each language file

Secret Scanning:
- Allow 'Authorization: Bearer YOUR_TOKEN' in docs/migrations/*.md
- Allow common placeholders (YOUR_API_KEY, example-token, etc.)
- Documentation examples no longer trigger false positives

API Routes:
- Clean up unused variables and imports
- All routes pass TypeScript compilation
- ESLint validation passes with max-warnings 0

Lockfile & Dependencies:
- Verified pnpm lockfile is up to date
- All dependencies properly resolved
- No overrides conflicts

Fixes:
- Secret Scanning false positives
- I18n Validation script accuracy
- GitHub Actions workflow warnings
- Route Quality checks
- Production Environment Validation (previous commit)

All TypeScript compilation and linting checks pass locally.
Date: 2025-11-24 11:48:58

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -171,11 +171,8 @@ jobs:
             else
               echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
             fi
-            if [ -n "${{ secrets.GOOGLE_CLIENT_SECRET }}" ]; then
-              echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> "$GITHUB_ENV"
-            else
-              echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
-            fi
+            # Note: secrets.GOOGLE_CLIENT_SECRET is conditionally set
+            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET || '' }}" >> "$GITHUB_ENV"
           fi
 
       - name: Run Playwright E2E Tests
