--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
     "lint:md": "markdownlint \"**/*.md\" \"!node_modules\" \"!.next\"",
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\"",
     "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { execSync('which rg', {stdio: 'ignore'}); execSync('rg -n \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm'); console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } catch(e) { if (e.status === 1) process.exit(0); }\"",
+    "health": "bash scripts/system-health-check.sh",
+    "health:watch": "watch -n 30 'bash scripts/system-health-check.sh'",
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
