--- a/.github/workflows/i18n-validation.yml
+++ b/.github/workflows/i18n-validation.yml
@@ -136,6 +136,8 @@ jobs:
       
       - name: TypeScript check
         run: pnpm tsc --noEmit
+        env:
+          NODE_OPTIONS: --max-old-space-size=8192
       
       - name: Verify translation coverage baseline
         run: |
