--- a/.github/workflows/route-quality.yml
+++ b/.github/workflows/route-quality.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          run_install: false
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -49,9 +49,9 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          run_install: false
       - uses: actions/setup-node@v4
         with:
           node-version: 20
