--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -30,9 +30,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 9.0.0
+          run_install: false
 
       - name: Get pnpm store directory
         id: pnpm-cache
@@ -58,6 +58,8 @@ jobs:
       - name: TypeScript Typecheck
         run: pnpm run typecheck
         continue-on-error: false
+        env:
+          NODE_OPTIONS: --max-old-space-size=8192
 
       - name: ESLint Check
         run: pnpm run lint
