fix(quality-gates): resolve RTL lint, i18n audit, and scan-delta failures
- TopBar: use start-2 for RTL compat

- audit-translations: read i18n/*.json

- scan-delta: ignore .tmp/

- .gitignore: add /.tmp/

--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,9 @@ Thumbs.db
 *.emergency-bak
 duplicate-detection-report.json
 
-# Temp directory (prevent tracking large patch files)
+# Temp directories (prevent tracking temporary files)
 /tmp/
+/.tmp/
 
 # Local artifacts we'll keep but not commit
 /_archive/
