--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -45,12 +45,18 @@ jobs:
       # - name: Run tests
       #   run: pnpm run test --if-present
       - name: Build project
-        run: pnpm run build
-        env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-ci-test' }}
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'ci-test-secret-key-min-32-chars-long-for-testing' }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
-          NEXT_PUBLIC_APP_URL: http://localhost:3000
+        run: |
+          # Set env vars with fallbacks
+          MONGODB_URI="${{ secrets.MONGODB_URI }}"
+          NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}"
+          NEXTAUTH_URL="${{ secrets.NEXTAUTH_URL }}"
+          
+          export MONGODB_URI="${MONGODB_URI:-mongodb://localhost:27017/fixzit-ci-test}"
+          export NEXTAUTH_SECRET="${NEXTAUTH_SECRET:-ci-test-secret-key-min-32-chars-long-for-testing}"
+          export NEXTAUTH_URL="${NEXTAUTH_URL:-http://localhost:3000}"
+          export NEXT_PUBLIC_APP_URL="http://localhost:3000"
+          
+          pnpm run build
         # CRITICAL: Removed continue-on-error - build failures must block PRs
 
       - name: Upload inventory artifacts
