--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -159,20 +159,19 @@ jobs:
             echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
           else
-            if [ -z "${{ secrets.NEXTAUTH_SECRET }}" ]; then
+            # Use shell parameter expansion for secret checking and fallback
+            NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}"
+            if [ -z "${NEXTAUTH_SECRET}" ]; then
               echo "Missing NEXTAUTH_SECRET secret for internal run." >&2
               exit 1
             fi
-            echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
-            echo "AUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
+            echo "NEXTAUTH_SECRET=${NEXTAUTH_SECRET}" >> "$GITHUB_ENV"
+            echo "AUTH_SECRET=${NEXTAUTH_SECRET}" >> "$GITHUB_ENV"
             # Google OAuth is optional - set to empty string if not configured
-            if [ -n "${{ secrets.GOOGLE_CLIENT_ID }}" ]; then
-              echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> "$GITHUB_ENV"
-            else
-              echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
-            fi
-            # Note: secrets.GOOGLE_CLIENT_SECRET is conditionally set
-            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET || '' }}" >> "$GITHUB_ENV"
+            GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
+            GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
+            echo "GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}" >> "$GITHUB_ENV"
+            echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}" >> "$GITHUB_ENV"
           fi
 
       - name: Run Playwright E2E Tests
