--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -55,6 +55,8 @@ jobs:
           export NEXTAUTH_SECRET="${NEXTAUTH_SECRET:-ci-test-secret-key-min-32-chars-long-for-testing}"
           export NEXTAUTH_URL="${NEXTAUTH_URL:-http://localhost:3000}"
           export NEXT_PUBLIC_APP_URL="http://localhost:3000"
+          export DISABLE_MONGODB_FOR_BUILD="true"
+          export SKIP_ENV_VALIDATION="true"
           
           pnpm run build
         # CRITICAL: Removed continue-on-error - build failures must block PRs
