refactor: comprehensive type safety and code quality improvements
Major Changes:
- Fix 50+ TypeScript errors with proper type annotations
- Remove explicit 'any' types throughout codebase
- Add proper error handling with typed catch blocks
- Improve API route parameter typing (Next.js 15 async params)
- Fix VSCode configuration and workflow issues

Type Safety:
- Replace 'any' with proper types in API routes
- Add typed error handling (Error | unknown)
- Fix async route params typing
- Improve service layer type definitions

Code Quality:
- Remove unused variables and imports
- Fix ESLint warnings and errors
- Improve error messages with proper typing
- Add proper null checks and optional chaining

Configuration:
- Update GitHub Actions workflows
- Fix VSCode settings and tasks
- Update TypeScript config for stricter checks
- Add type declarations for external packages

Files Modified: 50+ files across app/, server/, lib/, services/
Impact: Improved type safety, better error handling, cleaner codebase

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -9,6 +9,7 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     env:
+      # Secrets are configured in GitHub Settings > Secrets and variables > Actions
       NODE_OPTIONS: --max-old-space-size=8192
 
     steps:
@@ -46,10 +47,10 @@ jobs:
       #   run: pnpm run test --if-present
       - name: Build project
         run: |
-          # Set env vars with fallbacks
-          MONGODB_URI="${{ secrets.MONGODB_URI }}"
-          NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}"
-          NEXTAUTH_URL="${{ secrets.NEXTAUTH_URL }}"
+          # GitHub Repository Secrets (configured in Settings > Secrets and variables > Actions)
+          MONGODB_URI="${{ secrets.MONGODB_URI || '' }}"
+          NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET || '' }}"
+          NEXTAUTH_URL="${{ secrets.NEXTAUTH_URL || '' }}"
           
           export MONGODB_URI="${MONGODB_URI:-mongodb://localhost:27017/fixzit-ci-test}"
           export NEXTAUTH_SECRET="${NEXTAUTH_SECRET:-ci-test-secret-key-min-32-chars-long-for-testing}"
