--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,7 @@
 {
-  "recommendations": [
-    "ms-vscode.remote-explorer",
-    "github.codespaces",
-    "ms-vscode.remote-server",
-    "ms-dotnettools.csdevkit",
-    "github.copilot",
-    "github.vscode-github-actions",
-    "christian-kohler.npm-intellisense",
-    "codium.codium"
-  ],
-  "unwantedRecommendations": ["ms-vscode.powershell"]
+  "recommendations": [],
+  "unwantedRecommendations": [
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "eg2.tslint"
+  ]
 }
