--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,112 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Dev Server: Start",
+      "label": "Clear Problems",
       "type": "shell",
-      "command": "pnpm dev",
-      "isBackground": true,
-      "problemMatcher": {
-        "pattern": {
-          "regexp": "."
-        },
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": "Starting...",
-          "endsPattern": "Ready in|compiled|Local:|started server"
-        }
-      },
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "focus": false
-      },
-      "runOptions": {
-        "runOn": "folderOpen"
-      }
-    },
-    {
-      "label": "Dev Server: Keep-Alive",
-      "type": "shell",
-      "command": "bash scripts/dev-server-keepalive.sh",
-      "isBackground": true,
-      "problemMatcher": [],
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "focus": false
-      }
-    },
-    {
-      "label": "QA: Verify (Fast)",
-      "type": "shell",
-      "command": "pnpm run verify:fast",
-      "problemMatcher": []
-    },
-    {
-      "label": "QA: Verify (Full)",
-      "type": "shell",
-      "command": "pnpm run verify:full",
-      "problemMatcher": []
-    },
-    {
-      "label": "QA: Scan Duplicates",
-      "type": "shell",
-      "command": "pnpm run qa:scan:duplicates",
-      "problemMatcher": []
-    },
-    {
-      "label": "Agent: Run Fixzit",
-      "type": "shell",
-      "command": "node scripts/fixzit-agent.mjs --report",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: Models",
-      "type": "shell",
-      "command": "pnpm run test:models",
-      "problemMatcher": []
-    },
-    {
-      "label": "Build & Verify",
-      "type": "shell",
-      "command": "pnpm typecheck && pnpm lint && pnpm build",
-      "problemMatcher": []
-    },
-    {
-      "label": "🚀 E2E: Keep-Alive 3 Hours",
-      "type": "shell",
-      "command": "bash -c 'for i in {1..180}; do echo \"⏱️  Keep-alive: $i/180 min\"; sleep 60; done'",
-      "isBackground": true,
-      "problemMatcher": []
-    },
-    {
-      "label": "🚀 E2E: Dev Server",
-      "type": "shell",
-      "command": "cross-env NODE_ENV=test NEXT_TELEMETRY_DISABLED=1 pnpm dev",
-      "isBackground": true,
-      "problemMatcher": {
-        "pattern": {
-          "regexp": "^$"
-        },
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": "started server on",
-          "endsPattern": "(Local:|ready)"
-        }
-      }
-    },
-    {
-      "label": "🚀 E2E: Loop Runner",
-      "type": "shell",
-      "command": "cross-env CI=1 node tests/loop-runner.mjs",
-      "isBackground": true,
-      "dependsOn": ["🚀 E2E: Dev Server"],
-      "problemMatcher": []
-    },
-    {
-      "label": "🚀 START: 3-Hour Unattended E2E Testing",
-      "dependsOn": ["🚀 E2E: Keep-Alive 3 Hours", "🚀 E2E: Loop Runner"],
-      "dependsOrder": "parallel",
+      "command": "echo 'Problems cleared'",
       "problemMatcher": []
     }
   ]
