--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Secrets are configured in GitHub Settings > Secrets and variables > Actions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN || '' }}
           # GITLEAKS_LICENSE only needed for commercial use - removed for open-source
 
       - name: Scan summary
