--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -15,7 +19,6 @@
     "jsx": "preserve",
     "incremental": true,
     "downlevelIteration": true,
-    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
@@ -26,48 +29,34 @@
       "react",
       "react-dom",
       "next",
-      "google.maps",
-      "vitest/globals"
+      "google.maps"
     ],
-    "rootDir": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
   "include": [
+    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next-env.d.ts",
-    ".next/types/**/*.ts",
-    "vitest.config.ts",
-    "vitest.setup.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
     ".next",
+    "out",
     "dist",
     "build",
-    "out",
-    "tests/unit/models/CmsPage.test.ts",
-    "tests/rbac/cross-tenant-isolation.test.ts",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "tests/**/*",
-    "qa/**/*",
-    "scripts/**/*",
-    "tools/**/*",
-    "i18n/dictionaries/en.ts",
-    "i18n/dictionaries/ar.ts",
-    "i18n/dictionaries/ar-industries.ts",
-    "i18n/new-translations.ts",
-    "i18n/sources/**/*"
-  ],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "esnext",
-      "moduleResolution": "node16"
-    }
-  }
+    "coverage",
+    "playwright-report",
+    "test-results",
+    "public",
+    "qa",
+    "scripts",
+    "tools",
+    "tests",
+    "deployment"
+  ]
 }
