fix(pr-315): address CodeRabbit review issues
- Fix markdown lint violations in WORKFLOW_SECRETS_DOCUMENTATION.md (9 issues)
  - Add blank lines around fenced code blocks
  - Specify language for code blocks (text, bash, yaml)
  - Remove trailing spaces

- Add workflow documentation references
  - Link agent-governor.yml to WORKFLOW_SECRETS_DOCUMENTATION.md
  - Link e2e-tests.yml to WORKFLOW_SECRETS_DOCUMENTATION.md

- Optimize eslint-quality.yml workflow
  - Add concurrency groups to cancel stale runs
  - Remove duplicate ESLint execution (|| true masking)
  - Remove redundant precommit-sim job (duplicated lint-production-code)
  - Add permissions: contents: read

- Update VSCode configuration
  - Update DEV_SERVER_GUIDE.md with npm script migration docs
  - Remove unnecessary CloudFormation customTags from settings.json

Issues resolved:
- DOC-2: Markdown lint violations
- DOC-3: Missing workflow documentation links
- STYLE-1: Duplicate ESLint runs
- STYLE-2: Missing concurrency groups
- STYLE-3: Redundant precommit-sim job
- DOC-1: VSCode tasks migration documentation
- CONFIG-1: Unnecessary CloudFormation tags

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -1,5 +1,7 @@
 name: Agent Governor CI
 
+# Expected secret warnings documented in: .github/WORKFLOW_SECRETS_DOCUMENTATION.md
+
 on:
   pull_request:
   push:
