--- a/.github/workflows/eslint-quality.yml
+++ b/.github/workflows/eslint-quality.yml
@@ -29,6 +29,13 @@ on:
       - "pnpm-lock.yaml"
       - "eslint.config.mjs"
 
+permissions:
+  contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-production-code:
     name: Lint Production Code
@@ -73,12 +80,7 @@ jobs:
             --max-warnings 0 \
             --report-unused-disable-directives \
             --format json \
-            -o _artifacts/eslint-results.json || true
-
-          # Also output to console
-          pnpm eslint app components lib services --ext .ts,.tsx,.js,.jsx \
-            --max-warnings 0 \
-            --report-unused-disable-directives
+            -o _artifacts/eslint-results.json
 
       - name: Run hard-coded URI guardrail
         run: |
@@ -163,30 +165,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run hard-coded URI scan
-        run: bash scripts/security/check-hardcoded-uris.sh
-
-  precommit-sim:
-    name: Pre-commit Sim (lint:prod + security scan)
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9.0.0
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run lint:prod
-        run: pnpm lint:prod
-
-      - name: Run security scan
         run: bash scripts/security/check-hardcoded-uris.sh
