--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -153,6 +153,10 @@ jobs:
           exit 1
 
       - name: Prepare E2E env vars
+        env:
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         run: |
           if [ "${{ github.event_name }}" = "pull_request" ] && [ "${{ github.event.pull_request.head.repo.fork }}" = "true" ]; then
             echo "Using generated secrets for forked PR (GitHub secrets are unavailable)."
@@ -163,7 +167,7 @@ jobs:
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
           else
             # Use shell parameter expansion for secret checking and fallback
-            NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}"
+            # Secrets loaded from env block
             if [ -z "${NEXTAUTH_SECRET}" ]; then
               echo "Missing NEXTAUTH_SECRET secret for internal run." >&2
               exit 1
@@ -171,8 +175,8 @@ jobs:
             echo "NEXTAUTH_SECRET=${NEXTAUTH_SECRET}" >> "$GITHUB_ENV"
             echo "AUTH_SECRET=${NEXTAUTH_SECRET}" >> "$GITHUB_ENV"
             # Google OAuth is optional - set to empty string if not configured
-            GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID || '' }}"
-            GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET || '' }}"
+            GOOGLE_CLIENT_ID="${GOOGLE_CLIENT_ID:-}"
+            GOOGLE_CLIENT_SECRET="${GOOGLE_CLIENT_SECRET:-}"
             echo "GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}" >> "$GITHUB_ENV"
             echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}" >> "$GITHUB_ENV"
           fi
