fix: comprehensive PR #317 review fixes - address all bot comments and zero-tolerance requirements
✅ PORTABILITY FIXES:
- Replace ripgrep with grep in guard:fm-hooks for cross-platform compatibility
- Add fallback error handling for systems without rg installed

✅ PROMISE RACE CONDITION FIXES:
- Fix unhandled rejection issue in tests/e2e/utils/auth.ts attemptLogin
- Add catch handlers to all Promise.race branches to prevent test flakiness
- Wrap losing promises with null fallback to prevent unhandled rejections

✅ ACCESSIBILITY IMPROVEMENTS:
- Verify skip link targets exist (ClientLayout and ResponsiveLayout already have id="main-content")
- Add comprehensive accessibility tests to auth-flow.spec.ts
- Add accessibility compliance tests to auth.spec.ts
- Test skip links, form labels, heading hierarchy, alt text, keyboard accessibility

✅ MISSING TEST COVERAGE:
- Create tests/e2e/utils/auth.test.ts with unit tests for auth utilities
- Create tests/helpers/mongooseMocks.test.ts with unit tests for mock builders
- Add RBAC negative tests (403) to tests/api/ats/applications.route.test.ts
- Add RBAC negative tests (403) to tests/api/ats/interviews.route.test.ts

✅ TYPE SAFETY IMPROVEMENTS:
- Replace loose types in tests/setup.ts: any → Record<string, unknown>
- Add QueryValue and QueryFilter types for Mongoose query matching
- Fix null safety in tests/finance/e2e/finance-pack.test.ts alloc.amount access
- Add type check before JSON.parse in qa/tests/lib-paytabs.create-payment.default.spec.ts (3 locations)
- Add mockResolvedValue default to fetch mock in WorkOrdersView.test.tsx

✅ API DOCUMENTATION:
- Add /api/ats/analytics endpoint to openapi.yaml with full spec
- Add /api/marketplace/search endpoint to openapi.yaml with pagination
- Add /api/paytabs/callback webhook endpoint to openapi.yaml

✅ FALSE POSITIVES IDENTIFIED:
- Page type IS already imported in tests/e2e/auth.spec.ts (bot error)
- next-auth.session-token cookies ARE present in all 6 test state files (bot error

--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "check:mock-flags": "node scripts/check-mock-flags.js",
     "lint:md": "markdownlint \"**/*.md\" \"!node_modules\" \"!.next\"",
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\"",
-    "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { execSync('which rg', {stdio: 'ignore'}); execSync('rg -n \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm'); console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } catch(e) { if (e.status === 1) process.exit(0); }\"",
+    "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { const result = execSync('grep -rn \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm 2>/dev/null || true', {encoding: 'utf8'}); if (result.trim()) { console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } } catch(e) { }\"",
     "health": "bash scripts/system-health-check.sh",
     "health:watch": "watch -n 30 'bash scripts/system-health-check.sh'",
     "prepare": "simple-git-hooks"
