feat: Improve Aqar and Project model schemas (#319)
- aqarBooking.model.ts: Refine schema structure and validation
- aqarBoost.model.ts: Add new fields and enhance boost functionality
- project.model.ts: Schema cleanup and improvements

Schema improvements:
- Better field organization
- Enhanced validation rules
- Support for new Aqar boost features
- Improved project model structure

Co-authored-by: Eng. Sultan Al Hassni <EngSayh@users.noreply.github.com>

--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -17,6 +17,5 @@ jobs:
       - name: PR Agent action step
         uses: qodo-ai/pr-agent@main
         env:
-      # Secrets are configured in GitHub Settings > Secrets and variables > Actions
-          OPENAI_KEY: ${{ secrets.OPENAI_KEY || '' }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN || '' }}
+          OPENAI_KEY: ${{ vars.OPENAI_KEY }}
+          GITHUB_TOKEN: ${{ github.token }}
